{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1987,
  "lineage": "9f0929ee-ad3e-5adb-fc1f-684ee3ae66ba",
  "resources": [
    {
      "module": "module.ec2_instance_vpc_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038bba9a164eb3dc1",
            "arn": "arn:aws:ec2:us-west-1:376129844985:instance/i-0b7f73b3fd1b5f3f3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7f73b3fd1b5f3f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-3-vpcs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dace8dadecd41440",
            "private_dns": "ip-10-0-3-123.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05fbde2c2ed4463f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018f3b15140aa0e82",
            "tags": {
              "Name": "client-instance-0"
            },
            "tags_all": {
              "Name": "client-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017a6747c266d7f18"
            ]
          },
          "dependencies": [
            "module.ec2_instance_vpc_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.private_subnet",
            "module.vpc_a.aws_subnet.public_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038bba9a164eb3dc1",
            "arn": "arn:aws:ec2:us-west-1:376129844985:instance/i-0684f7d8af25c9610",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0684f7d8af25c9610",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-for-3-vpcs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0651e868e6727a8b1",
            "private_dns": "ip-10-0-1-179.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_dns": "ec2-54-183-20-150.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.20.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb9d12c9ba63faa8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07304da397636196e",
            "tags": {
              "Name": "client-instance-1"
            },
            "tags_all": {
              "Name": "client-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017a6747c266d7f18"
            ]
          },
          "dependencies": [
            "module.ec2_instance_vpc_a.aws_security_group.ec2_sg",
            "module.vpc_a.aws_subnet.private_subnet",
            "module.vpc_a.aws_subnet.public_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_vpc_a",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:security-group/sg-017a6747c266d7f18",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017a6747c266d7f18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "client",
            "name_prefix": "",
            "owner_id": "376129844985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "client-sec-grp"
            },
            "tags_all": {
              "Name": "client-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_vpc_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055e3d4f0bbeb5878",
            "arn": "arn:aws:ec2:us-west-2:376129844985:instance/i-04bb6b0f504605dac",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bb6b0f504605dac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "b-vpc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef643d96dfac9c41",
            "private_dns": "ip-10-1-1-45.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.45",
            "public_dns": "ec2-35-92-203-167.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.203.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07cb9f62308328acd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b24780713156e6cf",
            "tags": {
              "Name": "client-instance-0"
            },
            "tags_all": {
              "Name": "client-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072fb6711dd52ad4c"
            ]
          },
          "dependencies": [
            "module.ec2_instance_vpc_b.aws_security_group.ec2_sg",
            "module.vpc_b.aws_subnet.public_subnet",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_vpc_b",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:security-group/sg-072fb6711dd52ad4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072fb6711dd52ad4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "client",
            "name_prefix": "",
            "owner_id": "376129844985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "client-sec-grp"
            },
            "tags_all": {
              "Name": "client-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_vpc_c",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:376129844985:instance/i-0aa7a2ac7a207fdf2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa7a2ac7a207fdf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "c-vpc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc151e07afaf42a8",
            "private_dns": "ip-10-2-3-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.3.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034f625ecaf605e09",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096cddfd3672a06a7",
            "tags": {
              "Name": "server-instance-0"
            },
            "tags_all": {
              "Name": "server-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091fb2c6094952cb2"
            ]
          },
          "dependencies": [
            "module.ec2_instance_vpc_c.aws_security_group.ec2_sg",
            "module.vpc_c.aws_subnet.private_subnet",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_vpc_c",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:security-group/sg-091fb2c6094952cb2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091fb2c6094952cb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "server",
            "name_prefix": "",
            "owner_id": "376129844985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-sec-grp"
            },
            "tags_all": {
              "Name": "server-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_accepter_vpc_b_to_vpc_a",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0114c7cc93412ef13",
            "peer_owner_id": "376129844985",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-028005ac6adb5f3b8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-01f45e622ba969f19",
            "vpc_peering_connection_id": "pcx-0114c7cc93412ef13"
          },
          "dependencies": [
            "module.peering_vpc_b_to_vpc_a.aws_vpc_peering_connection.requester",
            "module.vpc_a.aws_vpc.vpc",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_accepter_vpc_b_to_vpc_c",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-01907fddfbe845cf3",
            "peer_owner_id": "376129844985",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-07ef209555f2888cd",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-01f45e622ba969f19",
            "vpc_peering_connection_id": "pcx-01907fddfbe845cf3"
          },
          "dependencies": [
            "module.peering_vpc_b_to_vpc_c.aws_vpc_peering_connection.requester",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_vpc_b_to_vpc_a",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7efa866937e292f179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7efa866937e292f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0114c7cc93412ef13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.peering_vpc_b_to_vpc_a.aws_vpc_peering_connection.requester",
            "module.vpc_a.aws_vpc.vpc",
            "module.vpc_b.aws_route_table.private_rt",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_vpc_b_to_vpc_a",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0114c7cc93412ef13",
            "peer_owner_id": "376129844985",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-028005ac6adb5f3b8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-b-to-vpc-a"
            },
            "tags_all": {
              "Name": "vpc-b-to-vpc-a"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_vpc_b_to_vpc_c",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7efa866937e292f1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7efa866937e292f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-01907fddfbe845cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.peering_vpc_b_to_vpc_c.aws_vpc_peering_connection.requester",
            "module.vpc_b.aws_route_table.private_rt",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.peering_vpc_b_to_vpc_c",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-01907fddfbe845cf3",
            "peer_owner_id": "376129844985",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-07ef209555f2888cd",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-b-to-vpc-c"
            },
            "tags_all": {
              "Name": "vpc-b-to-vpc-c"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:internet-gateway/igw-096a7721c02863800",
            "id": "igw-096a7721c02863800",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-a-igw"
            },
            "tags_all": {
              "Name": "vpc-a-igw"
            },
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096a7721c02863800",
            "id": "r-rtb-05dc9b89ccec59c711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dc9b89ccec59c71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_internet_gateway.igw",
            "module.vpc_a.aws_route_table.public_rt",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:route-table/rtb-095984abf42f6ae53",
            "id": "rtb-095984abf42f6ae53",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-a-private-rt"
            },
            "tags_all": {
              "Name": "vpc-a-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:route-table/rtb-05dc9b89ccec59c71",
            "id": "rtb-05dc9b89ccec59c71",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096a7721c02863800",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-public-rt"
            },
            "tags_all": {
              "Name": "vpc-a-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007333645006b7ef3",
            "route_table_id": "rtb-095984abf42f6ae53",
            "subnet_id": "subnet-018f3b15140aa0e82"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.private_rt",
            "module.vpc_a.aws_subnet.private_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09795b8a9aa858522",
            "route_table_id": "rtb-095984abf42f6ae53",
            "subnet_id": "subnet-05c6885738793a384"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.private_rt",
            "module.vpc_a.aws_subnet.private_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d21555e512e2544",
            "route_table_id": "rtb-05dc9b89ccec59c71",
            "subnet_id": "subnet-07304da397636196e"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.public_rt",
            "module.vpc_a.aws_subnet.public_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c927155e13fd17e1",
            "route_table_id": "rtb-05dc9b89ccec59c71",
            "subnet_id": "subnet-007993dfb87a830a3"
          },
          "dependencies": [
            "module.vpc_a.aws_route_table.public_rt",
            "module.vpc_a.aws_subnet.public_subnet",
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:subnet/subnet-018f3b15140aa0e82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018f3b15140aa0e82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-private-0"
            },
            "tags_all": {
              "Name": "vpc-a-private-0"
            },
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:subnet/subnet-05c6885738793a384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6885738793a384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-private-1"
            },
            "tags_all": {
              "Name": "vpc-a-private-1"
            },
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:subnet/subnet-07304da397636196e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07304da397636196e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-public-0"
            },
            "tags_all": {
              "Name": "vpc-a-public-0"
            },
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:subnet/subnet-007993dfb87a830a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007993dfb87a830a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-public-1"
            },
            "tags_all": {
              "Name": "vpc-a-public-1"
            },
            "vpc_id": "vpc-028005ac6adb5f3b8"
          },
          "dependencies": [
            "module.vpc_a.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_a",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:376129844985:vpc/vpc-028005ac6adb5f3b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d002711989463ff5",
            "default_route_table_id": "rtb-077eec024a590ce8b",
            "default_security_group_id": "sg-00fdfedf61bc0999c",
            "dhcp_options_id": "dopt-0ae201b64fc7d05be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028005ac6adb5f3b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077eec024a590ce8b",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-a"
            },
            "tags_all": {
              "Name": "vpc-a"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:internet-gateway/igw-02ea7b870d4aca474",
            "id": "igw-02ea7b870d4aca474",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-b-igw"
            },
            "tags_all": {
              "Name": "vpc-b-igw"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ea7b870d4aca474",
            "id": "r-rtb-09f3176e5318a143c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f3176e5318a143c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_internet_gateway.igw",
            "module.vpc_b.aws_route_table.public_rt",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:route-table/rtb-0b7efa866937e292f",
            "id": "rtb-0b7efa866937e292f",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0114c7cc93412ef13"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01907fddfbe845cf3"
              }
            ],
            "tags": {
              "Name": "vpc-b-private-rt"
            },
            "tags_all": {
              "Name": "vpc-b-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:route-table/rtb-09f3176e5318a143c",
            "id": "rtb-09f3176e5318a143c",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ea7b870d4aca474",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-public-rt"
            },
            "tags_all": {
              "Name": "vpc-b-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09af750fbd2e84d10",
            "route_table_id": "rtb-0b7efa866937e292f",
            "subnet_id": "subnet-0958bbd2b0e818271"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.private_rt",
            "module.vpc_b.aws_subnet.private_subnet",
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a72453366c1eb60",
            "route_table_id": "rtb-0b7efa866937e292f",
            "subnet_id": "subnet-09736976212e9aab9"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.private_rt",
            "module.vpc_b.aws_subnet.private_subnet",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0250cecea9eb76e85",
            "route_table_id": "rtb-09f3176e5318a143c",
            "subnet_id": "subnet-0b24780713156e6cf"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.public_rt",
            "module.vpc_b.aws_subnet.public_subnet",
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2701f8f65089478",
            "route_table_id": "rtb-09f3176e5318a143c",
            "subnet_id": "subnet-053621b14e6ddd22d"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.public_rt",
            "module.vpc_b.aws_subnet.public_subnet",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:subnet/subnet-0958bbd2b0e818271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958bbd2b0e818271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-b-private-0"
            },
            "tags_all": {
              "Name": "vpc-b-private-0"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:subnet/subnet-09736976212e9aab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09736976212e9aab9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-b-private-1"
            },
            "tags_all": {
              "Name": "vpc-b-private-1"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:subnet/subnet-0b24780713156e6cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b24780713156e6cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-b-public-0"
            },
            "tags_all": {
              "Name": "vpc-b-public-0"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:subnet/subnet-053621b14e6ddd22d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053621b14e6ddd22d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-b-public-1"
            },
            "tags_all": {
              "Name": "vpc-b-public-1"
            },
            "vpc_id": "vpc-01f45e622ba969f19"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376129844985:vpc/vpc-01f45e622ba969f19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0be24747e6315cd8a",
            "default_route_table_id": "rtb-047b86948550da3d4",
            "default_security_group_id": "sg-04a9df9908b377c89",
            "dhcp_options_id": "dopt-027a275503e190592",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f45e622ba969f19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047b86948550da3d4",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-b"
            },
            "tags_all": {
              "Name": "vpc-b"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:internet-gateway/igw-098882e0e34cb105a",
            "id": "igw-098882e0e34cb105a",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-c-igw"
            },
            "tags_all": {
              "Name": "vpc-c-igw"
            },
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-098882e0e34cb105a",
            "id": "r-rtb-0d1e6cde95841227e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1e6cde95841227e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_c.aws_internet_gateway.igw",
            "module.vpc_c.aws_route_table.public_rt",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:route-table/rtb-0bd8188f31257b1b9",
            "id": "rtb-0bd8188f31257b1b9",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-c-private-rt"
            },
            "tags_all": {
              "Name": "vpc-c-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:route-table/rtb-0d1e6cde95841227e",
            "id": "rtb-0d1e6cde95841227e",
            "owner_id": "376129844985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098882e0e34cb105a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-c-public-rt"
            },
            "tags_all": {
              "Name": "vpc-c-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7fd78abf72cb30f",
            "route_table_id": "rtb-0bd8188f31257b1b9",
            "subnet_id": "subnet-096cddfd3672a06a7"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.private_rt",
            "module.vpc_c.aws_subnet.private_subnet",
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddeffb7f740b55a",
            "route_table_id": "rtb-0bd8188f31257b1b9",
            "subnet_id": "subnet-04ffd4177158958e2"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.private_rt",
            "module.vpc_c.aws_subnet.private_subnet",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6bee3b931e400a1",
            "route_table_id": "rtb-0d1e6cde95841227e",
            "subnet_id": "subnet-07c9ca485ba66d941"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.public_rt",
            "module.vpc_c.aws_subnet.public_subnet",
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bdbe619130b0d6d",
            "route_table_id": "rtb-0d1e6cde95841227e",
            "subnet_id": "subnet-0fef2d7613484e154"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.public_rt",
            "module.vpc_c.aws_subnet.public_subnet",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:subnet/subnet-096cddfd3672a06a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096cddfd3672a06a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-c-private-0"
            },
            "tags_all": {
              "Name": "vpc-c-private-0"
            },
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:subnet/subnet-04ffd4177158958e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ffd4177158958e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-c-private-1"
            },
            "tags_all": {
              "Name": "vpc-c-private-1"
            },
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:subnet/subnet-07c9ca485ba66d941",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9ca485ba66d941",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-c-public-0"
            },
            "tags_all": {
              "Name": "vpc-c-public-0"
            },
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:subnet/subnet-0fef2d7613484e154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fef2d7613484e154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376129844985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-c-public-1"
            },
            "tags_all": {
              "Name": "vpc-c-public-1"
            },
            "vpc_id": "vpc-07ef209555f2888cd"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376129844985:vpc/vpc-07ef209555f2888cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ad416a087daa2834",
            "default_route_table_id": "rtb-0a68fba89b14e6809",
            "default_security_group_id": "sg-01eaf312af48cc1ff",
            "dhcp_options_id": "dopt-03be824f9e9908ddf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ef209555f2888cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a68fba89b14e6809",
            "owner_id": "376129844985",
            "tags": {
              "Name": "vpc-c"
            },
            "tags_all": {
              "Name": "vpc-c"
            }
          }
        }
      ]
    }
  ]
}